# conformal-nutrition

./: .gitignore  README.md  README.ru.md  pyproject.toml
docs/: README.md
ios/: NutritionInferencePipeline.swift  README.md
ios/Resources/: conformal_quantiles.json  normalization.json
notebooks/: 01_data_preparation.ipynb  02_visual_baseline.ipynb  03_multimodal_fusion.ipynb  04_conformal_calibration.ipynb  05_iphone_microbench.ipynb
scripts/: README.md  convert_to_coreml.py  export_onnx.py
src/: __init__.py
src/calibration/: __init__.py  cqr.py  metrics.py
src/data/: __init__.py  nutrition5k.py  transforms.py
src/models/: __init__.py  fusion.py  heads.py  text.py  visual.py
src/training/: __init__.py  callbacks.py  losses.py  train_loop.py
src/utils/: __init__.py  checkpoints.py  kaggle_safe.py  seeds.py
