[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "conformal-nutrition"
version = "0.1.0"
description = "Мультимодальная регрессия нутриентов с конформной калибровкой предсказательных интервалов."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Daria Karasheva" }]

dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "transformers>=4.40,<5",
    "sentence-transformers>=2.7",
    "pandas>=2.0",
    "numpy>=1.24",
    "pillow>=10.0",
    "tqdm>=4.66",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
deploy = [
    "coremltools>=8",
    "numpy<2",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
